<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shbat_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sahabat@todo.todo">sahabat</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <depend>slam_toolbox</depend>
  <depend>wheeltec_n100_imu</depend>
  <depend>oradar_lidar</depend>
  <depend>nav2_bringup</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
